--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: row;
     margin-right: 1.5vw;
-
+    height: 30px;
     .navbar-cart {
       display: flex;
       flex-direction: row;
